# gywadmin-oci

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  py-requirements-dev.txt  pyproject.toml
.github/workflows/: ci.yml  python-tests.yml  tag-release.yml
src/gywadmin_oci/: __init__.py  common.py  initialize_oci.py  manage_unseal.py  manage_vault.py  update_github_secrets.py
tests/: test_common.py  test_session_auth.py  test_update_github_secrets.py
tests/oci/: conftest.py  test_add_secret.py  test_cli_aliases.py  test_delete_secret.py  test_list_secrets.py  test_list_secrets_cli.py  test_manage_unseal.py  test_mek_selection.py  test_summary_file_cli.py  test_tag_helpers.py  test_update_get_secret_cli.py
